force-app/main/default/objects/User_Workspace_Context__c/User_Workspace_Context__c.object-meta.xml
<CustomObject>
    <label>User Workspace Context</label>
    <nameField>
        <label>Context Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Workspace Contexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>