force-app/main/default/objects/User_Workspace_Context__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>View</fullName>
                <default>true</default>
                <label>View</label>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>