force-app/main/default/objects/User_Workspace_Context__c/fields/Is_Active_Session__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Session__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active Session</label>
    <type>Checkbox</type>
</CustomField>