force-app/main/default/objects/User_Workspace_Context__c/fields/is_dismissed__c.field-meta.xml
<CustomField>
    <fullName>is_dismissed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is dismissed</label>
    <type>Checkbox</type>
</CustomField>