force-app/main/default/objects/User_Workspace_Context__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>