force-app/main/default/objects/User_Workspace_Context__c/fields/Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Priority_Score__c</fullName>
    <label>Priority Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>