force-app/main/default/objects/User_Workspace_Context__c/fields/Session_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Session_Timestamp__c</fullName>
    <label>Session Timestamp</label>
    <type>DateTime</type>
</CustomField>