force-app/main/default/objects/User_Workspace_Context__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage / Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>