force-app/main/default/objects/User_Workspace_Context__c/fields/Tab_URL__c.field-meta.xml
<CustomField>
    <fullName>Tab_URL__c</fullName>
    <label>Tab URL</label>
    <type>Url</type>
</CustomField>