force-app/main/default/objects/User_Workspace_Context__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Workspace Contexts</relationshipLabel>
    <relationshipName>Workspace_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>